hledger/test/errors/unbalanced-txn.j
#!/usr/bin/env -S hledger check -f

1/1
  a  1
